--- a/_posts/2016-02-06-spring-festival-dinner-at-liu.mkd
+++ b/_posts/2016-02-06-spring-festival-dinner-at-liu.mkd
@@ -24,9 +24,10 @@ tags: [life, japan]
 
 还有刘蝶的烤箱（海尔）和微波炉（松下）。
 ![](/img/in-post/spring-liu/IMGP0212.png)
-关于两者的区别，我跟王荆沁讨论了好久。结论是
+关于两者在*品质*上的差别，我跟王荆沁讨论了好久。结论是
 
-> 真差不多，海尔的烤箱唯一的缺点就是刚开始烤的时候不会亮灯。
+> 真差不多，都能用；  
+> 海尔的烤箱用起来有一点不好，就是刚开始烤的时候不会亮灯
 
 ##### 准备材料
 这里要特别感谢刘蝶和王荆沁同学！  
@@ -112,4 +113,4 @@ tags: [life, japan]
 
 [^sichuan-hotpot]: 这里是我个人的判断，权威的定义参见[百度百科](http://baike.baidu.com/view/357824.htm)
 [^liu-home]: 刘蝶住的是公司提供的第三方寮；有厨房，但是对于4个人来说还是有点挤不开。
-[^album]: 我已将完整的相册上传到百度云网盘，请[点击下载](http://pan.baidu.com/s/1c1qe2Us){:target="_blank"}
+[^album]: 完整的相册已经上传到百度云网盘，请[点击下载](http://pan.baidu.com/s/1c1qe2Us){:target="_blank"}
