minor correct vim-on-mac

--- a/_posts/2016-02-05-vim-on-mac.mkd
+++ b/_posts/2016-02-05-vim-on-mac.mkd
@@ -80,13 +80,13 @@ header.intro-header {
 	*	用法
 		- 在编写python脚本的过程中敲`,,`即可美化代码并保存
 
-	1.	如果你的开发环境跟我一样（Mac OSX 10.11），不要试图用GitHub上现成的各种基于yapf的vim插件；
+	1.	如果你的开发环境跟我一样（Mac OSX 10.11），**不要试图用GitHub上现成的各种基于yapf的vim插件**；
 		我试过几个，都会报各种奇怪的错误
 	2.	注意上面写的是`BufWrite*Pre*`，不是*post*；所以，是先美化再写入文件
 	3.	``mzgggqG`z`` 是三个动作
 		* `mz` 标记当前位置
 		* `gg gq G` 跳到文档首行，美化到文档尾行
-		* `\`z` 回到之前标记好的位置
+		* `` `z`` 回到之前标记好的位置
 	{:.note}
 
 * #### 主要参考了以下文章
