obscure liu-spring

--- a/_posts/2016-02-06-spring-festival-dinner-at-liu.mkd
+++ b/_posts/2016-02-06-spring-festival-dinner-at-liu.mkd
@@ -1,6 +1,6 @@
 ---
-title:      "欢乐的准年饭@刘蝶的小窝（多图慎入，约40MB）"
-subtitle:   "多谢款待！ with 孙文婷, 王荆沁"
+title:      "欢乐的准年饭@蝶蝶的小窝（多图慎入，约40MB）"
+subtitle:   "多谢款待！ with 小孙, 王总"
 date:       2016-02-06
 tags: [life, japan]
 ---
@@ -9,28 +9,28 @@ tags: [life, japan]
 * 时间： 2016年2月6日 13:00~18:30 (+0900 Asia/Tokyo)
 * 地点： 日本国神奈川県川崎市*元住吉駅*付近
 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3245.572798438339!2d139.65250527425516!3d35.564251460093615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60185f8115c0f6ab%3A0xb9ba231f5765435c!2z5YWD5L2P5ZCJ6aeF!5e0!3m2!1sja!2sjp!4v1454759285793" width="400" height="300" frameborder="0" style="border:0;max-width:100%;" allowfullscreen></iframe>
-* 小伙伴： 刘蝶（东家），孙文婷，王荆泌，钱炜烁（俺）
+* 小伙伴： 蝶蝶（东家），小孙，王荆泌，钱炜烁（俺）
 
 #### 流程
 
 ##### 到家
-我差不多是和小孙同时到*元住吉:station:* 的，当时互相不认识；刘蝶出来接我们。  
-当刘蝶带着我们俩“做贼”一般地钻进刘蝶的小窝[^liu-home]时，发现王荆沁已经带着诡异地微笑在等候了……
+我差不多是和小孙同时到*元住吉:station:* 的，当时互相不认识；蝶蝶出来接我们。  
+当蝶蝶带着我们俩“做贼”一般地钻进蝶蝶的小窝[^liu-home]时，发现王总已经带着诡异地微笑在等候了……
 
-作为一个大俗人，我首先关注到的是刘蝶的小桌子。  
+作为一个大俗人，我首先关注到的是蝶蝶的小桌子。  
 ![](/img/in-post/spring-liu/IMGP0211.JPG)
 纯木质的，样子简单，小巧又实用，貌似还挺结实。  
-*关键* 是——刘蝶告诉我们，**这货才3000日元**！虽说是二手的，但是几乎完全看不出用过的痕迹。
+*关键* 是——蝶蝶告诉我们，**这货才3000日元**！虽说是二手的，但是几乎完全看不出用过的痕迹。
 
-还有刘蝶的烤箱（海尔）和微波炉（松下）。
+还有蝶蝶的烤箱（海尔）和微波炉（松下）。
 ![](/img/in-post/spring-liu/IMGP0212.png)
-关于两者在*品质*上的差别，我跟王荆沁讨论了好久。结论是
+关于两者在*品质*上的差别，我跟王总讨论了好久。结论是
 
 > 真差不多，都能用；  
 > 海尔的烤箱用起来有一点不好，就是刚开始烤的时候不会亮灯
 
 ##### 准备材料
-这里要特别感谢刘蝶和王荆沁同学！  
+这里要特别感谢蝶蝶和王总同学！  
 提前去菜场准备好了火锅用的材料。
 
 ##### 准备火锅
@@ -80,7 +80,7 @@ tags: [life, japan]
 5. 日本的互联网产品的坑爹程度
 6. 发展一位出生于日本的台湾同胞入党的可行性
 
-其中，王荆沁同学提出的**“公德与私德”论**得到了小伙伴们的一致肯定，  
+其中，王总同学提出的**“公德与私德”论**得到了小伙伴们的一致肯定，  
 大家纷纷表示，饭后要进一步深入研究该思想；将这一重大理论成果运用到日常生活中。
 
 讨论过程中，大家不忘保持良好的镜头感
@@ -90,10 +90,10 @@ tags: [life, japan]
 ![](/img/in-post/spring-liu/IMGP0232.JPG)
 <small class="img-hint">:thumbsup:这张很霸气！很销魂！有木有？！</small>
 
-最后，每人从刘蝶同学手中领取了一份周二/周六限定的珍贵礼物:gift:  
+最后，每人从蝶蝶同学手中领取了一份周二/周六限定的珍贵礼物:gift:  
 大家依依惜别……[^album]
 ![](/img/in-post/spring-liu/IMGP0233.JPG)
-<small class="img-hint">左起：孙文婷，钱炜烁，刘蝶，王荆沁</small>
+<small class="img-hint">左起：小孙，钱炜烁，蝶蝶，王总</small>
 
 ##### 总结
 ***这是一次团结的聚餐，胜利的聚餐***  
@@ -109,8 +109,8 @@ tags: [life, japan]
 
 	> 把辣椒粉放在碗中，把油烧烫，然后冲入碗中即成，  
 	> 冲入瞬间，会散发出诱人的香味；同时会比较呛人，注意通风。  
-	> —— 刘蝶
+	> —— 蝶蝶
 
 [^sichuan-hotpot]: 这里是我个人的判断，权威的定义参见[百度百科](http://baike.baidu.com/view/357824.htm)
-[^liu-home]: 刘蝶住的是公司提供的第三方寮；有厨房，但是对于4个人来说还是有点挤不开。
+[^liu-home]: 蝶蝶住的是公司提供的第三方寮；有厨房，但是对于4个人来说还是有点挤不开。
 [^album]: 完整的相册已经上传到百度云网盘，请[点击下载](http://pan.baidu.com/s/1c1qe2Us){:target="_blank"}
