--- a/_posts/2016-03-02-company-gfw.mkd
+++ b/_posts/2016-03-02-company-gfw.mkd
@@ -1,5 +1,5 @@
 ---
-title:      "绕过公司的HTTP代理，科学上网"
+title:      "穿透公司的HTTP代理，科学上网"
 subtitle:   "用nc帮助ssh穿透社内http代理，然后用ssh做各种端口转发/代理，基于curl做断点续传"
 #date:       2016-03-01
 tags:
@@ -15,8 +15,14 @@ tags:
 </style>
 
 如果你有空（10分钟左右），可以完整地听我讲段子……  
-如果只想马上找到解决方案，请点击[这里]。
-{:.note}
+如果只想马上找到解决方案，请点击[这里](#section-5)。
+{:.note.no_toc}
+
+## 目录
+{:.no_toc}
+
+* TOC
+{:toc}
 
 ## 背景交代
 以前在国内的时候，倍受方院士的关怀，享受了几年*GFW*的保护；  
@@ -31,42 +37,31 @@ tags:
 1.	所有明文的数据都要经过virus-check；  
 	即：下载文件时先缓冲到代理服务器，经过漫长的check完了之后，再下发到我们的PC。  
 	如果文件稍大(>=40MB?)，我们的`wget/curl/bitback`基本都要超时。
-	而且，经常无缘无故地把一些文件判为病毒（GNU官网上的gcc都被误判好几次）……
+	而且，经常无缘无故地把一些文件判为病毒（GNU官网上的gcc安装包都被误判好几次）……
 2.	只开放80(http)和443(https)端口  
 	这就意味着我们没法愉快地用`ssh`和`git over ssh`了
 3.	禁ICMP流量（`ping`用不了）
-4.	封一部分域名（e.g. 中国淘宝……）
+4.	封一部分域名（e.g. 中国淘宝……，这个还好，我在岛国也不用淘宝）
 5.	所有访问记录留日志
 
 尤其是前两条！ **严重影响了正常的开发工作**
 
 公司那帮所谓的技术支持人员，只会死守规矩，全社一刀切 —— 不论你是文秘还是码农。  
 入社十年的先辈表示：反映过多次，然并卵——那帮家伙只会说“公司规定，一视同仁”。  
-唯一变通的办法就是：6楼有个小黑屋，里面有个不走代理的公网插口专供那个神秘的部门使用；
+唯一变通的办法就是：6楼有个小黑屋，里面有个不走代理的公网插口专供某个神秘的部门使用；
 可以找人带我进去，然后千恩万谢/诚惶诚恐地「すみませんでした」
 
 靠！哥只是想好好工作而已，还得这么麻烦！？
 有没有天理？
 ![](/img/in-post/company-proxy/eee.png)
 
-每次我要下载稍大一点的安装包，就得去6楼跟太君低声下气地求情。  
+每次我要下载稍大一点的安装包，就得去6楼跟太君说好话[^6f]。  
 此种情形深深地伤害了我等方院士栽培出来的天朝码农！
 
 是可忍熟不可忍？！  
 哥决定——**fxxk个斑马养滴代理！**{:.bigfont}
-![](/img/in-post/company-proxy/nidouwo.jpg)
 
-## 原理说明
-为了尽可能还原我的思考&搜集资料过程，
-以下内容大致按照时间顺序记录（包括失败的方法）。  
-如果遇到读不懂的地方不用纠结，下文会有详细说明。  
-另外，**不要急于敲命令**；建议读完本文，再动手配置。
-{:.note}
-
-我最开始读到的是这篇文章 <https://daniel.haxx.se/docs/sshproxy.html>  
-此文内容比较完备，可惜不够详尽。  
-下面仅以其作为技术框架，说明整体的技术方案；
-**其中用到的各项技术会在后文逐一详解，如遇读不懂的，请暂时搁置。**
+![](/img/in-post/company-proxy/zhuangbi.png){: style="width:50%"}
 
 文中推荐我们用`corkscrew`/`nc`来搭梯，帮助`ssh`越过 http-proxy。
 然后直接用`ssh -D`来做`socks5代理`；  
@@ -95,6 +90,7 @@ Port 443
 然后`sudo service sshd restart`，  
 然后在客户端`ssh root@<VPS-name> -p 443`即可。
 
+![](/img/in-post/company-proxy/smile.jpg)
 当然，以上是理想情况；一般没那么简单，
 我们往往还是需要一把梯子来帮助`ssh`穿越社内http-proxy。  
 这里常用的梯子有`corkscrew`和`nc`。
@@ -215,6 +211,21 @@ Host <target-host-ip>
 ProxyCommand ssh -W %h:%p <hop-ssh-server>
 ~~~
 
+说明：如果想用私钥免密码登录ssh，可以配置`ssh-agent`，参考[这里](https://confluence.atlassian.com/bitbucket/set-up-ssh-for-git-728138079.html#SetupSSHforGit-startagent)。
+
+-----
+
+以上就是最强大，最主流的基于`nc`的科学上网用法  
+于是……  
+就妥了？？？
+![](/img/in-post/company-proxy/wait.jpeg)
+
+「ちょっと待って！」  
+公司的http代理服务器可不一定那么老实！  
+说不定已经把`HTTP CONNECT`方法给封了，釜底抽薪！
+
+如果你不幸遇到这种情况，就只好使出最后的大杀器“两头搭梯”了 —— `httptunnel`
+
 ### httptunnel
 前文所述：
 
@@ -253,10 +264,19 @@ ProxyCommand ssh -W %h:%p <hop-ssh-server>
 	{:.note}
 
 
-以上方法应该可以解决 `ssh`穿透`company-http-proxy`的问题了。  
-如果还是不行，可以试着参考这篇 <http://www.v2ex.com/t/128485>  
-或者这篇 <http://qiita.com/kiida/items/37557a1029788afec98a>  
-或者自己谷歌了……
+以上方法的伪装效果是“普通的HTTP流量访问VPS上的80端口”，  
+*看上去绝对大大的良民！*
+![](/img/in-post/company-proxy/smile.jpg)
+
+这个方法应该是可以解决 `ssh`穿透`company-http-proxy`的问题了。  
+万一还是不行，可以试着参考:
+
+*	<http://www.v2ex.com/t/128485>  
+*	<http://qiita.com/kiida/items/37557a1029788afec98a>  
+*	度娘/必应
+*	谷歌
+*	志强
+*	……
 
 ## 基于ssh的各种玩法
 上面已经实现了`ssh`连接。下面就可以基于`ssh`连接来各种折腾。  
@@ -280,7 +300,7 @@ ssh -f -N -L <local-port>:<dest-ip>:<dest-port> root@<VPS-ip>
 	地址用另一种格式说明: `port/host/hostport`
 
 补充说明
-:	说明一下其它几个选项
+:	关于其它几个选项
 	
 	> ~~~ config
 	> -f Fork into background after authentication. 
@@ -305,7 +325,8 @@ ssh -f -N -R <VPS-port>:<local-ip>:<local-port> root@<VPS-ip>
 语义
 :	把`<local-ip>:<local-port>` 通过`root@<VPS-ip>`中转，绑定到`<VPS-ip>:<VPS-port>`上  
 
-这里的`<local-ip>`跟上面不同；不一定要求是`localhost`，只要是局域网内都行。
+	这里的`<local-ip>`跟上面不同；不一定要求是`localhost`，只要是局域网内都行。
+	{:.note}
 
 原理
 :	将远程主机(服务器)的某个端口转发到本地端指定机器的指定端口.
@@ -343,7 +364,7 @@ ssh -f -C -N -L 11111:C:80 username@B
 wget http://B:11111/path/to/file
 ~~~
 
-这个方法不稳定；因为它改动了域名，可能导致`wget`发出的`HTTP GET`消息被服务器给拒绝掉。
+这个方法不稳定；因为它改动了域名，可能导致`wget`发出的`HTTP GET`消息被服务器拒掉。
 {:.note}
 
 ### `ssh -D` + `proxychains`
@@ -356,6 +377,20 @@ proxychains4 wget ...
 ~~~
 
 原文用的是`proxychains-ng`，据说比`proxychains`好用；未实验，应该都能用。
+
+### `ssh -D` + `tsocks`
+参考 <http://xiezhenye.com/2011/11/%E8%AE%A9-wget-%E7%94%A8%E4%B8%8A-socks-%E4%BB%A3%E7%90%86.html>
+
+~~~ zsh
+ssh -f -N -D 0.0.0.0:1234 root@<VPS>
+vi /etc/tsocks.conf
+# server = 127.0.0.1
+# server_type = 5
+# server_port = 1234
+tsocks wget ...
+~~~
+
+跟上述的 `proxychains`原理几乎一样，就是不同的工具而已。
 
 ### `ssh -D` + `socksify`
 > In order to use wget with a SOCKS5 proxy from ssh, you have to install the
@@ -384,28 +419,15 @@ proxychains4 wget ...
 ssh -C root@<VPS> "wget -O- http://website-C" >> file-from-website-C
 ~~~
 
-两个下载工具的“输出到stdout”的写法不同：
+两个下载工具的“输出到stdout”的写法不同：  
 `wget -O- <url>`的写法是：大写的O后面直接跟短横线，没有空格。  
 `curl <url>`与之等价，不带参数
 {:.note}
 
-### `ssh -D` + `tsocks`
-参考 <http://xiezhenye.com/2011/11/%E8%AE%A9-wget-%E7%94%A8%E4%B8%8A-socks-%E4%BB%A3%E7%90%86.html>
-
-~~~ zsh
-ssh -f -N -D 0.0.0.0:1234 root@<VPS>
-vi /etc/tsocks.conf
-# server = 127.0.0.1
-# server_type = 5
-# server_port = 1234
-tsocks wget ...
-~~~
-
-跟上述的 `proxychains`原理几乎一样，就是不同的工具而已。
-
 ### [补充]如何稳定地传送大文件
 
-#### [基于`curl`的断点续传](http://www.cyberciti.biz/faq/curl-command-resume-broken-download/)
+#### 基于`curl`的断点续传
+ref <http://www.cyberciti.biz/faq/curl-command-resume-broken-download/>
 
 ~~~zsh
 cd <path-to-where-downloaded-last-time>
@@ -414,29 +436,62 @@ curl -L -O -C - http://ftp.ussg.iu.edu/linux/centos/6.5/isos/x86_64/CentOS-6.5-x
 
 自动断点续传
 
-#### [`rsync`同步](http://stackoverflow.com/questions/20860896/is-there-a-way-to-continue-broken-scp-secure-copy-command-process-in-linux)
+#### `rsync`同步
+ref <http://stackoverflow.com/questions/20860896/is-there-a-way-to-continue-broken-scp-secure-copy-command-process-in-linux>
 
-#### `git clone`
+#### `git fetch`
+自己想到的一个思路，没试过。
+可以参考下面的两篇文章：
+
+*	<https://m.oschina.net/blog/347491>
+*	<http://blog.csdn.net/cupidove/article/details/9019165>
 
 ## 总结
 
 简明的步骤：
 
+1.	改自己机器上的`ssh`客户端配置，帮助其穿透社内http代理。  
+	`vi ~/.ssh/config`
+	
+	~~~ config
+	Host <target-host-ip>
+		User root #自己根据情况改
+		ProxyCommand nc -X connect -x <company-http-proxy-ip>:<company-http-proxy-port> %h %p
+
+	#顺手配置好bitbucket，方便用git
+	Host bitbucket.org
+	    User git
+		ProxyCommand nc -X connect -x <company-http-proxy-ip>:<company-http-proxy-port> %h %p
+	~~~
+
+	此时应该可以直接ssh登录到目标服务器了；
+	万一还是不行，可以试试[用`httptunnel`两头搭梯](#httptunnel)。
+2.	用[ssh输出重定向](#ssh-1)，下载感兴趣的文件
+	
+	~~~ zsh
+	ssh -C root@<VPS> "wget -O- <url>" >> <download-file-name>
+	~~~
+
+结论：  
+试图跟*天朝码农*玩代理？ —— **呵呵！**{:.bigfont}
+![](/img/in-post/company-proxy/hehe.jpg)
+
 ## 脚注
 
-[^domestic-proxy]:	自己租VPS搭建过，也买过几家服务商的科学上网服务。我个人比较喜欢的工具链是：
+[^domestic-proxy]:	自己租VPS搭过，也买过几家服务商的科学上网服务。我个人比较喜欢的工具链是：
 
 	| 桌面端 | crolax shadowsocks + shadowsocksX + Proxy SwitchyOmega |
 	| 移动端 | hopemoon VPN + OS自带的PPTP设置 |
 	
-	以上所列的服务端都是收费的，但是不贵，而且比自己搭建的服务要稳定，而且免得折腾。
-	当然，如果你拥有自己的VPS而且热爱折腾，也可以在自己的服务器上搭建shadowsocks server 或者 PPTP server。
+	以上所列的服务端都是收费的，但是不贵，比自己搭建的服务要稳定，而且免得折腾。
+	当然，如果你拥有自己的VPS并且热爱折腾，也可以在自己的服务器上搭建`shadowsocks` server或者`PPTP` server。
 
-	如果你在国内，推荐用DigitalOcean的VPS，便宜/稳定/管理方便/支持双栈IP/有亚洲机房（在新加坡）；
-	如果你在国外(QQ音乐/优酷…… 诸多版权服务不认海外IP)，建议你去淘宝上买。
+	*	如果你在国内，推荐用DigitalOcean的VPS，便宜/稳定/管理方便/支持双栈IP/有亚洲机房（在新加坡）；
+	*	如果你在国外(QQ音乐/优酷…… 诸多版权服务不认海外IP)，建议你去淘宝上买VPS。
 	
 	以上就是我在国内使用过的收费/免费工具。
 	从研一开始，差不多用了3年多了；配置成熟，运行稳定。
+	![](/img/in-post/company-proxy/tuotuo.png)
 	具体的配置方法请自行度娘或者必应，不解释。
 
 [^http-connect]:	`HTTP/1.1`中有个`CONNECT`方法，主要用http-proxy。  
@@ -446,3 +501,11 @@ curl -L -O -C - http://ftp.ussg.iu.edu/linux/centos/6.5/isos/x86_64/CentOS-6.5-x
 
 [^home-file]:	这里用的是`~/.ssh/config`；其实用全局配置文件`/etc/ssh/sshd_config`也行。
 	类似的，配置文件有多个时，一般你随便用哪个都行。本文中仅举一例说明，下不赘述。
+
+[^6f]:	把办公用的笔记本电脑抱到6楼，插上专用网口，下好离线安装包再拷到自己开发用的台式机上 ……  
+	这已经够坑爹了，而让人绝望的是 —— 有时候要下好几十个不同的文件/或者根本就不是下载什么离线安装包，
+	而是执行一个涉及到大文件传输的程序，例如`apt-get`或者`bitbake`。  
+	这是*让我把台式机搬到6楼？ 你TM确定不是在逗我？*  
+	![](/img/in-post/company-proxy/nidouwo.jpg)
+	试图在笔记本上装代理？*呵呵！*那个本本是win系统的，直接在公司的监控之下……
+
